--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,3 +16,11 @@
 .users-list .media {
   margin-bottom: 10px;
 }
+
+.posts-list .media {
+  margin-bottom: 15px;
+}
+
+.posts-list-bottom a {
+  margin-left: 7px;
+}
