adding shops and products. many many databes conection

--- a/public/css/admin/main.css
+++ b/public/css/admin/main.css
@@ -22,6 +22,14 @@
   text-decoration: none;
 }
 
+select#shop{
+  min-width: 20%;
+}
+
+select#shop option {
+  padding: 5px;
+}
+
 .nav_title {
     width: 230px;
     float: left;
