--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,26 +1,151 @@
-.users-list a {
+html, body {
+    background-color: #fff;
+    color: #636b6f;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 100;
+    height: 100vh;
+    margin: 0;
+}
+
+.full-height {
+    height: 100vh;
+}
+
+.flex-center {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.position-ref {
+    position: relative;
+}
+
+.top-right {
+    position: absolute;
+    right: 10px;
+    top: 18px;
+}
+
+.content {
+    text-align: center;
+}
+
+.title {
+    font-size: 84px;
+}
+
+.links > a {
+    color: #636b6f;
+    padding: 0 25px;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: .1rem;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.m-b-md {
+    margin-bottom: 30px;
+}
+
+.index-content a:hover{
+    color:black;
+    text-decoration:none;
+}
+.index-content{
+    margin-bottom:20px;
+    padding:50px 0px;
+
+}
+.index-content .row{
+    margin-top:20px;
+}
+.index-content a{
+    color: black;
+}
+.index-content .card{
+    background-color: #FFFFFF;
+    padding:0;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius:4px;
+    box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.3);
+
+}
+.index-content .card:hover{
+    box-shadow: 0 16px 24px 2px rgba(0,0,0,0.14), 0 6px 30px 5px rgba(0,0,0,0.12), 0 8px 10px -5px rgba(0,0,0,0.3);
+    color:black;
+}
+.index-content .card img{
+    width:100%;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+.index-content .card h4{
+    margin:20px;
+}
+.index-content .card p{
+    margin:20px;
+    opacity: 0.65;
+}
+.index-content .blue-button{
+    width: 100px;
+    -webkit-transition: background-color 1s , color 1s; /* For Safari 3.1 to 6.0 */
+    transition: background-color 1s , color 1s;
+    min-height: 20px;
+    background-color: #002E5B;
+    color: #ffffff;
+    border-radius: 4px;
+    text-align: center;
+    font-weight: lighter;
+    margin: 0px 20px 15px 20px;
+    padding: 5px 0px;
+    display: inline-block;
+}
+.index-content .blue-button:hover{
+    background-color: #dadada;
+    color: #002E5B;
+}
+
+.card .item-img {
+  height: 200px;
+  overflow: hidden;
+}
+
+.card h4 {
+    line-height: 25px;
+    height: 51px;
+    overflow: hidden;
+}
+
+.card {
+  margin-bottom: 20px;
+}
+
+.item-image img {
+  width: 100%;
+  height: auto;
+}
+
+.item-image h4 {
   color: #000;
-  text-decoration: none;
+  font-size: 20px;
+  font-weight: bold;
 }
 
-.users-list a:hover {
-  color: #2854a1;
-  text-decoration: none;
+.item-image p {
+  float: right;
 }
 
-.users-list-bottom form,
-.users-list-bottom a {
-  margin-right: 5px;
+.item-image .date {
+  margin-right: 20px;
 }
 
-.users-list .media {
-  margin-bottom: 10px;
-}
 
-.posts-list .media {
-  margin-bottom: 15px;
-}
+@media (max-width: 768px) {
 
-.posts-list-bottom a {
-  margin-left: 7px;
+    .index-content .col-lg-4 {
+        margin-top: 20px;
+    }
 }
