--- a/public/css/main.css
+++ b/public/css/main.css
@@ -142,6 +142,15 @@ html, body {
   margin-right: 20px;
 }
 
+footer {
+  background: #333;
+  padding: 20px 0;
+}
+
+.footer-logo img {
+  width: 100%;
+  height: auto;
+}
 
 @media (max-width: 768px) {
 
