--- a/public/css/admin/main.css
+++ b/public/css/admin/main.css
@@ -216,6 +216,9 @@ td.index-buttun {
   margin-left: 5px;
 }
 
+.float-left {
+  float: left;
+}
 @media (min-width: 768px){
   .form-horizontal .control-label {
       padding-top: 0;
