--- a/public/css/main.css
+++ b/public/css/main.css
@@ -152,6 +152,21 @@ footer {
   height: auto;
 }
 
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+  margin: 30px 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
 @media (max-width: 768px) {
 
     .index-content .col-lg-4 {
